// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generates a \`.js\` service 1`] = `
"import Service from "@ember/service";

export default class FooService extends Service {}
"
`;

exports[`generates a \`.js\` service at a custom path 1`] = `
"import Service from "@ember/service";

export default class FooService extends Service {}
"
`;

exports[`generates a \`.ts\` service 1`] = `
"import Service from "@ember/service";

export default class FooService extends Service {}

declare module "@ember/service" {
  interface Registry {
    foo: FooService;
  }
}
"
`;

exports[`generates a \`.ts\` service at a custom path 1`] = `
"import Service from "@ember/service";

export default class FooService extends Service {}

declare module "@ember/service" {
  interface Registry {
    foo: FooService;
  }
}
"
`;

exports[`generates a nested \`.js\` service 1`] = `
"import Service from "@ember/service";

export default class FooBarService extends Service {}
"
`;

exports[`generates a nested \`.ts\` service 1`] = `
"import Service from "@ember/service";

export default class FooBarService extends Service {}

declare module "@ember/service" {
  interface Registry {
    "foo/bar": FooBarService;
  }
}
"
`;
